snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.141111-2.jar.md5
7cb6c2553f6d2f06f93366abbdab2244